[package]
name = "part1_cargo"
version = "0.1.0"
edition = "2021"

[dependencies]

cortex-m = "0.7.4"
cortex-m-rt = "0.6.10"
stm32f4 = {version = "0.8.0", features = ["stm32f411", "rt"]}
nb = "0.1.2"

panic-halt = "0.2.0"

[cortex-m.dependencies]
bitfield = "0.13.2"
serde = "1"
volatile-register = "0.2.0"
bare-metal = {version = "0.2.5", features = ["const-fn"]}
embedded-hal = {version = "0.2.4", features = ["unproven"]}

[serde.dependencies]
serde_derive = "1.0.136"